# open-iot-sdk

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENCE.md  LICENSE.md  README.md  TS_Instructions.md  ats.sh  conftest.py  pytest.ini
bsp/: CMakeLists.txt  an547_ns.sct  an552_ns.sct  an555_ns.sct  config_tfm_target.h  signing_layout_ns.c  signing_layout_ns_update.c  signing_layout_s.c  tfm_s.sct
bsp/an386/: bsp.c
bsp/an552/: CMakeLists.txt  linker.ld
bsp/aws_configs/: aws_iot_metrics.h  core_http_config.h  core_pkcs11_config.h  iot_ble_numericComparison.h  iot_config.h  iot_config_common.h  iot_demo_logging.h  iot_mqtt_agent_config.h  ota_config.h
bsp/cmsis-config/: RTOS_config.h
bsp/default_credentials/: aws_clientcredential_keys.h  azure_iot_credentials.h
bsp/freertos-config/: FreeRTOSConfig.h  portmacro.h
bsp/freertos-platform/: lwip_emac_netif.h  lwip_memory_manager.h
bsp/mbedtls_config/: CMakeLists.txt  aws_mbedtls_config.h  threading_alt.h
bsp/netxduo-config/: sample_azure_iot_embedded_sdk_connect.c
bsp/platform/: application_helpers.c  arm_vsi.h  armclang_retarget.c  bsp_serial.c  bsp_serial.h  sai_driver.c
bsp/tfm-config/: project_config.h
bsp/threadx-config/: tx_user.h
examples/ats-keyword/: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  ats.sh  conftest.py
examples/ats-keyword/blinky/: CMakeLists.txt  README.md  main.c
examples/ats-keyword/blinky/tests/: test_blinky.py
examples/ats-keyword/bsp/: CMakeLists.txt  an555_ns.sct  signing_layout_ns.c  signing_layout_ns_update.c  signing_layout_s_update.c
examples/ats-keyword/bsp/aws_configs/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_demo_config.h  aws_ota_agent_config.h  aws_secure_sockets_config.h  core_mqtt_config.h  core_pkcs11_config.h  device_cfg.h  iot_config.h  iot_mqtt_agent_config.h  iot_mqtt_config.h  ota_demo_config.h
examples/ats-keyword/bsp/cmsis-config/: basetypes.h
examples/ats-keyword/bsp/default_credentials/: aws_clientcredential.h  aws_clientcredential_keys.h  iothub_credentials.h
examples/ats-keyword/bsp/freertos-config/: FreeRTOSConfig.h
examples/ats-keyword/bsp/freertos-platform/: application_helpers.c  bsp_serial.c  lwip_emac_netif.c  lwip_memory_manager.c  lwip_stack.c  lwip_stack.h  lwipopts.h  print_log.c  print_log.h
examples/ats-keyword/bsp/lwip-config/: user_lwipopts.h
examples/ats-keyword/bsp/mbedtls_config/: README.md
examples/ats-keyword/bsp/platform/: print_log.c  print_log.h
examples/ats-keyword/ci/: avh.yml  aws_cleanup.py  build_examples.sh
examples/ats-keyword/examples/blinky/: CMakeLists.txt
examples/ats-keyword/kws/: CMakeLists.txt  README.md
examples/ats-keyword/kws/include/: audio_processing.h  ml_interface.h  update_task.h
examples/ats-keyword/kws/ota/: mqtt_demo_mutual_auth.c  ota_demo_core_http.c  ota_demo_core_mqtt.c
examples/ats-keyword/kws/source/: aws_demo.c  blink_task.c  ethosu_platform_adaptation.c  main_ns.c
examples/ats-keyword/kws/tests/: conftest.py  test_azure.py  test_ml.py
examples/ats-keyword/lib/AWS/: aws-iot-device-sdk-fetch.cmake
examples/ats-keyword/lib/lwip/: CMakeLists.txt  lwip-fetch.cmake
examples/ats-keyword/lib/ml-kit/: ml-embedded-evaluation-kit.patch
examples/ats-keyword/mlia/: README.md  mlia.sh
examples/ats-keyword/patches/: ml-embedded-evaluation-kit.patch  tf-m.patch
examples/ats-keyword/scripts/: bootstrap.sh  build.sh  run.sh
examples/keyword/: CMakeLists.txt
examples/keyword/include/: ml_interface.h
examples/keyword/source/: azure_netxduo_demo.c  main_ns.c  peripheral_memmap.h
examples/keyword/tests/: conftest.py  test_azure.py  test_ml.py  test_ota.py
kws/: CMakeLists.txt
kws/include/: blink_task.h
kws/ota/: ota_demo_core_mqtt.c
kws/ota/ota_pal_psa/: README.md  ota_pal.c
kws/ota/ota_pal_psa/version/: application_version.c
kws/ota/provision/: ota_provision.c
kws/source/: azure_demo.c  ml_interface.cc  update_task.c
kws/tests/: aws_test_util.py  test_ota.py
lib/AWS/: CMakeLists.txt
lib/AWS/coreHTTP/: CMakeLists.txt
lib/AWS/coreJSON/: CMakeLists.txt
lib/AWS/coreMQTT-Agent/: CMakeLists.txt
lib/AWS/ota/: ota_demo_core_mqtt.c
lib/AWS/ota/ota_pal_psa/: README.md  (+2 more)
lib/AWS/ota_for_aws/: CMakeLists.txt  ota_os_cmsisrtos.c
lib/AWS/patches/: apply.sh
lib/AWS/tinycbor/: CMakeLists.txt
lib/SpeexDSP/: CMakeLists.txt
lib/ml-kit/: CMakeLists.txt
v8m/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE.md  README.md  ats.sh  compile_commands.json  conftest.py  requirements.ci.txt  requirements.txt
v8m/applications/blinky/: CMakeLists.txt
v8m/applications/keyword/: CMakeLists.txt  README.md
v8m/bsp/: CMakeLists.txt  an547_bl2.sct  an552_ns.ld  an552_ns.sct  an555_ns.ld  an555_ns.sct  signing_layout_ns_update.c  signing_layout_s_update.c  tfm_s.sct
v8m/bsp/aws_configs/: CMakeLists.txt  iot_config.h
v8m/bsp/cmsis-config/: RTE_Components.h  RTOS_config.h  heap-alloc.c
v8m/bsp/default_credentials/: aws_clientcredential.h
v8m/bsp/freertos-config/: FreeRTOSConfig.h
v8m/bsp/lwip-config/: user_lwipopts.h
v8m/bsp/netxduo-config/: nx_azure_iot_cert.c  nx_azure_iot_cert.h  nx_azure_iot_ciphersuites.c  nx_azure_iot_ciphersuites.h  nx_user.h
v8m/bsp/platform/: application_helpers.c  gcc_retarget.c  mps3_leds.c  mps3_leds.h
v8m/ci/: assume_role.sh  avh.yml  aws_cleanup.py  bootstrap.sh  build_examples.sh  cleanup_avh_instances.py  generate_credentials.sh
v8m/examples/blinky/: CMakeLists.txt
v8m/examples/keyword/: README.md
v8m/examples/speech/: CMakeLists.txt  README.md
v8m/lib/AWS/: CMakeLists.txt
v8m/lib/SpeexDSP/: config.h  os_support_custom.h  speexdsp_config_types.h
v8m/lib/ml-kit/: CMakeLists.txt
v8m/mlia/: README.md  mlia.sh
v8m/mlia/tests/: test_ats_mlia.py
v8m/release-changes/: README.md
v8m/scripts/: build.sh  createIoTThings.py  run.sh  vht_cli.py
v8m/scripts/templates/: aws_clientcredential_keys_template.h  aws_clientcredential_template.h
(+236 files in other folders)
